# krippendorff-alpha-article

./: .gitignore  Makefile  README.md  Untitled  mkdocs.yml  mkdocs_hooks.py  pyproject.toml  requirements.txt  roadmap-krippendorff-alpha-v3.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/workflows/: ci.yml
article/: README.md  krippendorff-alpha.md  krippendorff-alpha.pt-BR.md
docs/: dataset-design.md  math-derivations-checklist.md  outline.md  thesis.md
mkdocs_docs/: about.md  article.md  index.md
mkdocs_docs/javascripts/: mathjax.js
notebooks/: 01_statistical_foundation.ipynb  02_kappa_family.ipynb  03_alpha_derivation.ipynb  04_experiments.ipynb
notes/: phase1-theory.md  phase2-kappa.md  phase3-alpha.md
scripts/: experiment_a_random.py  experiment_b_trap.py  experiment_c_llm.py  experiment_d_missing.py  export_article_for_portfolio.py  kappa_paradox_plot.py  phase1_convergence_plot.py
src/: __init__.py  coincidence.py  distances.py  experiment_util.py  loader.py  metrics.py  simulate.py
tests/: test_coincidence.py  test_distances.py  test_metrics.py  test_scaffold.py  test_simulate.py
